Add character in localstorage

--- a/html/character_registration.html
+++ b/html/character_registration.html
@@ -17,7 +17,8 @@
         </select><br>
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" value=""><br><br>
-        <input type="submit" value="Submit" onclick="manager.add_character()">
+        <input type="submit" value="add character" onclick="manager.add_character()">
+        <input type="submit" value="show character" onclick="manager.show_character()">
     </form>
 </body>
 </html>
