--- a/html/character_registration.html
+++ b/html/character_registration.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script text="text/javascript" src="/js/character_registration.js">
+    <script text="text/javascript" src="/js/game.js">
     </script>
 </head>
 <body>
