--- a/html/character_registration.html
+++ b/html/character_registration.html
@@ -18,7 +18,8 @@
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" value=""><br><br>
         <input type="submit" value="add character" onclick="manager.add_character()">
-        <input type="submit" value="show character" onclick="manager.show_character()">
+        <input type="submit" value="kill fallens" onclick="manager.kill_fallens()">
+        <input type="submit" value="create fallens" onclick="manager.create_fallens()">
     </form>
 </body>
 </html>
