Improve form character registration

--- a/html/character_registration.html
+++ b/html/character_registration.html
@@ -13,7 +13,7 @@
         <div class="box">
             <h1>Diablo 2</h1>
             <h6>Insira as informações desejadas</h6>
-            <form id="character_registration">
+            <form>
                 <label for="fclass">Class:</label><br>
                 <select id="class" name="class">
                     <option value="paladin">Paladin</option>
