--- a/html/character_registration.html
+++ b/html/character_registration.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <script text="text/javascript" src="/js/game.js">
+    <script type="module" text="text/javascript" src="/js/game.js">
     </script>
     
 </body>
