Change file name

--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script type="module" text="text/javascript" src="/js/game.js">
+    <script type="module" text="text/javascript" src="/js/main.js">
     </script>
     
 </body>
