--- a/html/game_window.html
+++ b/html/game_window.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script type="module" text="text/javascript" src="/js/game.js">
+    <script type="module" text="text/javascript" src="/js/main.js">
     </script>
     
 </body>
