--- a/html/character_registration.html
+++ b/html/character_registration.html
@@ -6,6 +6,17 @@
     
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
+    <header>
+        <div class="nav-bar">
+            <nav>
+                <a href="game_window.html">Home</a> |
+                <a href="https://diablo.fandom.com/wiki/Diablo_II#Story">Story</a> |
+                <a href="https://diablo.fandom.com/wiki/Diablo_II#Character_classes">Character Class</a> 
+            </nav>
+        </div>
+    </header>
+
 <body>
 
     <div class="container">
