--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +8,18 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body class="body">
 
+    <div class="container">
+        <div class="box">
+            <div class="box-left">
+                
+            </div>
+            <div class="box-right">
+
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
