Add basic img paladin

--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -13,13 +13,20 @@
     <div class="container">
         <div class="box">
             <div class="box-left">
-                
+                <div id="monster">
+
+                </div>
             </div>
             <div class="box-right">
+                <div id="hero">
 
+                </div>
             </div>
         </div>
     </div>
+
+    <script type="module" text="text/javascript" src="/js/main.js">
+    </script>
     
 </body>
 </html>
