Implements basic container status

--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -12,16 +12,26 @@
 
     <div class="container">
         <div class="box">
-            <div class="box-left">
+            <div class="card1">
                 <div id="monster">
 
                 </div>
             </div>
-            <div class="box-right">
+            <div class="card2">
                 <div id="hero">
 
                 </div>
             </div>
+
+            <div class="status1">
+                
+            </div>
+
+            <div class="status2">
+                
+            </div>
+
+
         </div>
     </div>
 
