Add basic status

--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -23,14 +23,17 @@
                 </div>
             </div>
 
-            <div class="status1">
-                
+            <div class="card3">
+                <div id="monster-status">
+
+                </div>
             </div>
 
-            <div class="status2">
-                
-            </div>
+            <div class="card4">
+                <div id="hero-status">
 
+                </div>
+            </div>
 
         </div>
     </div>
