Add basic atk button

--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -33,6 +33,7 @@
                 <div id="hero-status">
 
                 </div>
+                <button id="btn-atk">Attack</button>
             </div>
 
         </div>
