Implements orc button lvl up

--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -27,6 +27,7 @@
                 <div id="monster-status">
 
                 </div>
+                <button id="btn-lvlup">Lvl up</button>
             </div>
 
             <div class="card4">
