--- a/html/fight_screen.html
+++ b/html/fight_screen.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
-    <link rel="stylesheet" href="/css/style.css">
-</head>
 
-<body class="body">
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
 
+  <body class="body">
     <div class="container">
-        <div class="box">
-            <div class="card1">
-                <div id="monster">
-
-                </div>
-            </div>
-            <div class="card2">
-                <div id="hero">
-
-                </div>
-            </div>
-
-            <div class="card3">
-                <div id="monster-status">
-
-                </div>
-                <button id="btn-lvlup">Lvl up</button>
-            </div>
-
-            <div class="card4">
-                <div id="hero-status">
-
-                </div>
-                <button id="btn-atk">Attack</button>
-            </div>
-
+      <div class="box">
+        <div class="card1">
+          <div id="monster"></div>
         </div>
+        <div class="card2">
+          <div id="hero"></div>
+        </div>
+
+        <div class="card3">
+          <div id="monster-status"></div>
+          <button id="btn-lvlup">Lvl up</button>
+        </div>
+
+        <div class="card4">
+          <div id="hero-status"></div>
+          <button id="btn-atk">Attack</button>
+        </div>
+      </div>
     </div>
 
-    <script type="module" text="text/javascript" src="/js/main.js">
-    </script>
-    
-</body>
+    <script type="module" text="text/javascript" src="/js/main.js"></script>
+  </body>
 </html>
